# LuminaQuant

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  README.md  README_KR.md  config.yaml  dashboard.py  equity.csv  optimize.py  publish_api.ps1  publish_api.sh  pyproject.toml  run_backtest.py  run_bot.bat  run_bot.sh  run_live.py  run_live_ws.py  sync_private.ps1  sync_private.sh  trades.csv
.github/: hardcoded_params_baseline.json
configs/: config.example.yaml  score_config.example.json
docs/: API.md  CONFIG_SPEC.md  DASHBOARD_REALTIME_ANALYSIS_REPORT.md  DEPLOYMENT.md  FUTURES_STRATEGY_FACTORY.md  MODEL_ASSUMPTIONS.md  OPTIMIZATION_REFACTOR_NOTES.md  QUANT_RESEARCH_FACTORY.md  QUICKSTART_8GB_BASELINE.md  RELEASE_NOTES_2026-02-28.md  RUNBOOK_1Y_1S_LOCAL.md  SCORING_CONFIG_GUIDE.md  STRATEGY_FACTORY_WORKER3_REPORT.md  STRATEGY_FACTORY_WORKER4_REPORT.md  TRADING_MANUAL.md  VALIDATION_REPORT.md  WORKFLOW.md  WSL_CLONE_PRIVATE_PUBLIC.md  WSL_MT5_COMMANDS.md  architecture_pattern_benchmark_adoption.md
lumina_quant/: backtest.py  config.py  data.py  data_collector.py  data_sync.py  engine.py  events.py  execution.py  influx_market_data.py  interfaces.py  live_data.py  live_data_ws.py  live_execution.py  live_selection.py  live_trader.py  market_data.py  parquet_market_data.py  portfolio.py  risk_manager.py  runtime_cache.py  strategy.py  symbol_universe.py  timeframe_aggregator.py
reports/: Backtest_Report_2026-02-03_23-17-44.md
scripts/: audit_hardcoded_params.py  benchmark_architecture.py  benchmark_backtest.py  benchmark_formulaic_alpha.py  (+37 more)
(+233 files in other folders)
